force-app/main/default/objects/WidgetBackendConfig__mdt/WidgetBackendConfig__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for widget backend connectivity.</description>
    <label>Widget Backend Config</label>
    <pluralLabel>Widget Backend Configs</pluralLabel>
</CustomObject>