force-app/main/default/objects/WidgetBackendConfig__mdt/fields/BaseUrl__c.field-meta.xml
<CustomField>
    <fullName>BaseUrl__c</fullName>
    <description>Base URL of the widget backend API.</description>
    <label>Base Url</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>