force-app/main/default/objects/WidgetBackendConfig__mdt/fields/EmailPreviewTableColumns__c.field-meta.xml
<CustomField>
    <fullName>EmailPreviewTableColumns__c</fullName>
    <description>
        Space/comma/semicolon/dot separated apiname fields to display in the email preview table.
        `Subject` is always included regardless of this setting.
    </description>
    <label>Email Preview Table Columns</label>
    <length>255</length>
    <type>Text</type>
</CustomField>