force-app/main/default/objects/WidgetBackendConfig__mdt/fields/TimeoutMs__c.field-meta.xml
<CustomField>
    <fullName>TimeoutMs__c</fullName>
    <defaultValue>10000</defaultValue>
    <description>Callout timeout in milliseconds.</description>
    <label>Timeout Ms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>