force-app/main/default/objects/WidgetBackendConfig__mdt/fields/WidgetToken__c.field-meta.xml
<CustomField>
    <fullName>WidgetToken__c</fullName>
    <description>Bearer token used for backend authorization.</description>
    <label>Widget Token</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>